# yavs

./: .banditignore  .coverage.beowulfs-air.lan.20408.XWgVjCex  .coverage.beowulfs-air.lan.20618.XVynPgfx  .env.example  .gitattributes  .gitignore  .semgrepignore  .trivyignore  .yavs-baseline.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: compliance-scan.yml  comprehensive-scan.yml  dependency-scan.yml  policy-enforcement.yml  pr-self-scan.yml  pypi-publish.yml  sast-scan.yml  self-scan.yml  tests.yml
docs/: AI_PROVIDER_GUIDE.md  KNOWN_ISSUES.md  MAKEFILE_COMMANDS.md  MAKEFILE_GUIDE.md  MAKE_CLEAN_GUIDE.md  NATIVE_CONFIGS.md  OUTPUT_SCHEMAS.md  POLICY.md  PRODUCTION_CLI.md  QUICK-START.md  QUICKSTART.md  README.md  SUMMARIZE_BEHAVIOR.md  WORKFLOWS_OVERVIEW.md  YAVS.MD
docs/development/: CLEANUP_SUMMARY.md  COMBINATION_TESTS.md  DIRECTORY_STRUCTURE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_GUIDE.md  MULTI_PROVIDER_SUMMARY.md  MULTI_PROVIDER_TEST_RESULTS.md  NEW_MAKEFILE_FEATURES.md  PACKAGING_SUMMARY.md  PROJECT_SUMMARY.md  PYPI_AUTOMATION_SUMMARY.md  PYPI_PUBLISHING_SETUP.md  RELEASE_CHECKLIST.md  SHIPPING_READINESS.md  TESTING.md  TEST_GUIDE.md  WORKFLOWS_OVERVIEW.md
docs/examples/: example-structured-enriched.json  example-structured-with-ai.json  example-summary.json
docs/schemas/: schema-flat.json  schema-policy.json  schema-structured.json  schema-summary.json
examples/: README.md  comprehensive-scan.sh
examples/ci-cd/: azure-pipelines.yml  github-actions.yml  gitlab-ci.yml  jenkinsfile
examples/configs/: trivy.yaml  yavs-config-ci-fast.yaml  yavs-config-custom-modes.yaml  yavs-config-full.yaml  yavs-config-native.yaml  yavs-config-thorough.yaml
examples/docker/: images.txt
examples/policies/: README.md  compliance-pci.yaml  security-baseline.yaml  team-exceptions.yaml
scripts/: README.md  bump-version.sh  run-yavs.sh
src/yavs/: __init__.py  cli.py
src/yavs/ai/: __init__.py  fixer.py  provider.py  summarizer.py  triage.py
src/yavs/exporters/: __init__.py  csv_exporter.py
src/yavs/policy/: __init__.py  engine.py  loader.py  schema.py
src/yavs/policy/builtins/: security.yaml
src/yavs/reporting/: __init__.py  aggregator.py  html_report.py  sarif_converter.py  structured_output.py
src/yavs/scanners/: __init__.py  bandit.py  base.py  binskim.py  checkov.py  sbom.py  semgrep.py  template_analyzer.py  terrascan.py  trivy.py
src/yavs/templates/: report.jinja
src/yavs/utils/: __init__.py  auto_detect.py  baseline.py  git_blame.py  logging.py  metadata.py  path_utils.py  preflight.py  rule_links.py  scanner_installer.py  schema_validator.py  subprocess_runner.py  timeout.py  tool_versions.py
tests/: README.md  __init__.py  test_aggregator.py  test_all_combinations.sh  test_html_report.py  test_scanners.py  test_structured_output.py
tests/fixtures/: README.md
tests/fixtures/docker_images/: Dockerfile.python-app  Dockerfile.vulnerable-app  app.py  build-test-images.sh  requirements.txt
tests/fixtures/go_project/: go.mod  main.go
tests/fixtures/java_project/: pom.xml
tests/fixtures/java_project/src/main/java/com/example/: VulnerableApp.java
tests/fixtures/kubernetes/: deployment.yaml
tests/fixtures/nodejs_project/: package.json  server.js
tests/fixtures/sample_project/: main.py  requirements.txt  terraform.tf  test_multi_provider.sh
tests/integration/: test_cli.py  test_multi_language.py  test_policy_integration.py  test_summarize.py
tests/integration/workflows/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_ai_modules.py  test_auto_detect.py  test_bandit_enhanced.py  test_base_scanner.py  test_baseline_enhanced.py  test_binskim_enhanced.py  test_cli_functions.py  test_exporters.py  test_git_blame.py  test_logging.py  test_metadata_enhanced.py  test_policy_engine.py  test_preflight.py  test_remaining_modules.py  test_sbom.py  test_scanners_comprehensive.py  test_schema_validator.py  test_schema_validator_enhanced.py  test_subprocess_runner.py  test_timeout.py  test_tool_versions.py  test_utils_advanced.py
tests/unit/core/: test_aggregator.py
tests/unit/exporters/: test_csv_exporter.py
tests/unit/policy/: test_policy_engine.py  test_policy_loader_simple.py
tests/unit/reporting/: __init__.py  test_sarif_validation.py
tests/unit/scanners/: __init__.py  test_checkov.py  test_enhanced_coverage.py  test_scanners.py  test_semgrep.py  test_trivy.py
tests/unit/utils/: test_baseline.py  test_config.py  test_git_blame_simple.py  test_utils.py
